@@ -52,7 +52,7 @@ AC_CHECK_HEADERS(stdio.h stdlib.h string.h unistd.h netdb.h signal.h \
   sys/resource.h pthread.h windows.h process.h conio.h sys/wait.h regex.h \
   stdarg.h winsock2.h pdh.h psapi.h sys/sem.h sys/ipc.h sys/shm.h Winldap.h \
   sys/timeb.h Winber.h lber.h ws2tcpip.h inttypes.h sys/file.h grp.h \
-  net/if_mib.h sys/user.h sys/ucontext.h libperfstat.h devstat.h \
+  net/if_mib.h sys/user.h execinfo.h sys/ucontext.h libperfstat.h devstat.h \
   sys/systemcfg.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
@@ -759,6 +759,19 @@ AC_CHECK_FUNCS(getopt_long)
 AC_CHECK_FUNCS(strcasestr)
 AC_CHECK_FUNCS(getenv)
 AC_CHECK_FUNCS(putenv)
+
+dnl Option -rdynamic is needed for readable backtraces.
+AC_MSG_CHECKING(for -rdynamic linking option)
+saved_LDFLAGS="$LDFLAGS"
+LDFLAGS="-rdynamic"
+AC_TRY_LINK([#include <execinfo.h>],
+[void *bcktrc[6];
+(void)backtrace(bcktrc, 6);
+],
+LDFLAGS="$saved_LDFLAGS -rdynamic"
+AC_MSG_RESULT(yes),
+LDFLAGS="$saved_LDFLAGS"
+AC_MSG_RESULT(no))
 
 dnl Check if we want to compile everything with static
 AC_ARG_ENABLE(static,[  --enable-static         Build statically linked binaries],
